@@ -62,7 +62,6 @@ sub defaultconfig () { #{{{
 	cgi => 0,
 	post_commit => 0,
 	rcs => '',
-	notify => 0,
 	url => '',
 	cgiurl => '',
 	historyurl => '',
@@ -76,7 +75,6 @@ sub defaultconfig () { #{{{
 	w3mmode => 0,
 	wrapper => undef,
 	wrappermode => undef,
-	svnrepo => undef,
 	svnpath => "trunk",
 	gitorigin_branch => "origin",
 	gitmaster_branch => "master",
