@@ -1,3 +1,5 @@
+[[done]] (in this branch); fixed removing email notification support!
+
 I was suprised to receive two mails from ikiwiki about one web edit:
 
 	 1   F Oct 30 To joey+ikiwiki update of ikiwiki's plugins/contrib/gallery.mdwn by http://arpitjain11.myopenid.com/
