@@ -127,7 +127,7 @@ with that there's no new commit marker syntax to learn.
 
 Nearly the definition of a wiki, although perhaps ikiwiki challenges how
 much of that web gunk a wiki really needs. These features are optional
-and can be enabled by enabling [[CGI]].
+and can be enabled by enabling [[CGI]] and a [[Revision_Control_Systems|rcs]].
 
 ### User registration
 
@@ -160,11 +160,6 @@ Well, sorta. Rather than implementing YA history browser, it can link to
 
 ikiwiki can use the [[HyperEstraier]] search engine to add powerful
 full text search capabilities to your wiki.
-
-### Commit mails
-
-ikiwiki can be configured to send you commit mails with diffs of changes
-to selected pages.
 
 ### [[w3mmode]]
 
