@@ -4,3 +4,7 @@ particularly useful for [[todo]] and [bug](bugs) items, to allow users to receiv
 notifications for activity on their reports.
 
 --[[JoshTriplett]]
+
+I went and removed commit notification mails entirely, the idea is that you
+subscribe using the [[RecentChanges]] rss feed, and filter it on your end.
+Good enough? --[[Joey]]
