@@ -11,9 +11,6 @@ located in /usr/share/ikiwiki/templates by default.
 * `misc.tmpl` - Generic template used for any page that doesn't
   have a custom template.
 * `editpage.tmpl` - Create/edit page.
-* `notifymail.tmpl` - Not a html template, this is used to
-  generate change notification mails for users who have subscribed to
-  changes to a page.
 * `recentchanges.tmpl` - Used to generate a RecentChanges table with inline.
 * `change.tmpl` - Used to create a page describing a change made to the wiki.
 * `passwordmail.tmpl` - Not a html template, this is used to
