@@ -1,4 +1,0 @@
-The following change was made by <TMPL_VAR USER>:
-
-<TMPL_VAR MESSAGE>
-<TMPL_VAR DIFF>
