@@ -23,6 +23,9 @@ ikiwiki (2.21) UNRELEASED; urgency=low
     function.
   * Pages with extensions starting with "_" are internal-use, and will
     not be rendered or web-edited.
+  * Removed support for sending commit notification mails. Along with it went
+    the svnrepo and notify settings, though both will be ignored if left in
+    setup files.
 
  -- Joey Hess <joeyh@debian.org>  Fri, 11 Jan 2008 15:09:37 -0500
 
